--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.profiles.active=prod
+# DATASOURCE
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_api_rest
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.profiles.active=prod
 #spring.profiles.active=dev
 
 spring.jpa.open-in-view=false
